--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,56 @@
 sudo: false
 language: scala
 
-scala:
-  - 2.12.8
-  - 2.11.12
-
 jdk:
   - openjdk11
 
 before_install:
+  - git fetch --tags
   - export PATH=${PATH}:./vendor/bundle
 
-install:
-  - rvm use 2.6.0 --install --fuzzy
-  - gem update --system
-  - gem install sass
-  - gem install jekyll -v 3.2.1
+stages:
+  - name: test
+  - name: release
+    if: ((branch = master AND type = push) OR (tag IS present)) AND NOT fork
 
-script:
-  - sbt ++$TRAVIS_SCALA_VERSION test
-  - sbt ++$TRAVIS_SCALA_VERSION mimaReportBinaryIssues
-  - sbt ++$TRAVIS_SCALA_VERSION docs/makeMicrosite
+scala_version_213: &scala_version_213 "2.13.1"
+scala_version_212: &scala_version_212 "2.12.10"
 
-after_success:
-  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && test $TRAVIS_REPO_SLUG == "ChristopherDavenport/epimetheus-mules" && sbt ++$TRAVIS_SCALA_VERSION publish
-  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && test $TRAVIS_REPO_SLUG == "ChristopherDavenport/epimetheus-mules" && test $TRAVIS_SCALA_VERSION == "2.12.8" && sbt docs/publishMicrosite
+jobs:
+  include:
+    # stage="test" if no stage is specified
+    -
+      name: test 2.13
+      scala: *scala_version_213
+      script: sbt ++$TRAVIS_SCALA_VERSION test
+    - name: test 2.12
+      scala: *scala_version_212
+      script: sbt ++$TRAVIS_SCALA_VERSION test
+    # -
+    #   name: mima
+    #   script: sbt +mimaReportBinaryIssues
+    -
+      name: docs
+      scala: *scala_version_213
+      install:
+        - rvm use 2.6.0 --install --fuzzy
+        - gem update --system
+        - gem install sass
+        - gem install jekyll -v 4.0.0
+      script: sbt ++$TRAVIS_SCALA_VERSION site/makeMicrosite
+    # run ci-release only if previous stages passed
+    - stage: release
+      name: release
+      script: sbt ci-release
+    - stage: release
+      name: microsite
+      scala: *scala_version_213
+      install:
+        - rvm use 2.6.0 --install --fuzzy
+        - gem update --system
+        - gem install sass
+        - gem install jekyll -v 4.0.0
+      script: sbt ++$TRAVIS_SCALA_VERSION site/publishMicrosite
 
 cache:
   directories:
